Week 2, task 4. Add slow solution

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,6 +28,7 @@ set(Week_2
         task_1_sort_students
         task_2_learner
         task_3_expresses
+        task_4_ebook
         utility
 )
 
