Week 4, task 5. Pass

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -50,6 +50,7 @@ set(Week_4
         task_2_stackVector
         task_3_translator
         task_4_airportCounter
+        task_5_textEditor
         utility
         )
 
