Week 5. Task 6. Pass

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -61,6 +61,7 @@ set(Week_5
         task_3_simpleVector
         task_4_splitIntoSentences
         task_5_simpleVector2
+        task_6_mergeSort3
         )
 
 set(Week_6
