Week 5. Task 10. Pass and check solution

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -64,6 +64,8 @@ set(Week_5
         task_6_mergeSort3
 
         task_8_matrix_sum
+        task_9_blog
+        task_10_synchronized
         Account
         samples
         )
