Add the solution of the task 11 week 5.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -67,6 +67,7 @@ set(Week_5
         task_8_matrix_sum
         task_9_blog
         task_10_synchronized
+        task_11_ConcurrentMap
         Account
         samples
         )
